--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">practice</th></tr>
-<tr><td><a href="#t0">Priority</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">58</td><td>regression</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">practice</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Priority &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">TestNGPractice.PriorityExicution</td><td><a href="#m0">login</a></td><td rowspan="1">1732517775222</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">logout</a></td><td rowspan="1">1732517775225</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">opneApp</a></td><td rowspan="1">1732517775207</td><td rowspan="1">11</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestNGPractice.GroupingTestCase_1</td><td><a href="#m0">loginFB</a></td><td rowspan="1">1734525496026</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m1">loginIG</a></td><td rowspan="1">1734525496029</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="2">TestNGPractice.GroupingTestCase_2</td><td><a href="#m2">sigupIG</a></td><td rowspan="1">1734525496018</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m3">singupYT</a></td><td rowspan="1">1734525495999</td><td rowspan="1">10</td></tr><tr class="passedeven"><td rowspan="2">TestNGPractice.GroupingTestCase_3</td><td><a href="#m4">paymentinRiyal</a></td><td rowspan="1">1734525496023</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">paymentinRupee</a></td><td rowspan="1">1734525496021</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Priority</h2><h3 id="m0">TestNGPractice.PriorityExicution#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestNGPractice.PriorityExicution#logout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestNGPractice.PriorityExicution#opneApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestNGPractice.GroupingTestCase_1#loginFB</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNGPractice.GroupingTestCase_1#loginIG</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestNGPractice.GroupingTestCase_2#sigupIG</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestNGPractice.GroupingTestCase_2#singupYT</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">TestNGPractice.GroupingTestCase_3#paymentinRiyal</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">TestNGPractice.GroupingTestCase_3#paymentinRupee</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
