--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,30 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>TestNGPractice.paralleTesting</td>
+<td>TestNGPractice.GroupingTestCase_1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>pageTile</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testUrl</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testlogo</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>loginIG</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>setup</td>
-<td>&nbsp;</td></tr>
+<td>loginFB</td>
+<td>functional regression sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginYT</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -38,7 +37,69 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>TestNGPractice.GroupingTestCase_2</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
-<td>closeBrowser</td>
-<td>&nbsp;</td></tr>
+<td>sigupIG</td>
+<td>functional regression sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>sigupFB</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>singupYT</td>
+<td>regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>TestNGPractice.GroupingTestCase_3</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>paymentinDollar</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>paymentinRiyal</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>paymentinRupee</td>
+<td>functional regression sanity </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
