--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>TestNGPractice.GroupingTestCase_2.sigupFB</td></tr>
+<tr><td>TestNGPractice.GroupingTestCase_1.loginYT</td></tr>
+<tr><td>TestNGPractice.GroupingTestCase_3.paymentinDollar</td></tr>
 </table>
