--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98f8f">  <td>24/11/25 11:55:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityExicution.login()[pri:2, instance:TestNGPractice.PriorityExicution@1b7cc17c]">login</td> 
+<tr bgcolor="e98f8f">  <td>24/12/18 17:13:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentMethods.AdvanceSearch()[pri:4, instance:TestNGPractice.DependentMethods@77fbd92c]">AdvanceSearch</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>24/12/18 17:13:36</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentMethods.login()[pri:2, instance:TestNGPractice.DependentMethods@77fbd92c]">login</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>24/11/25 11:55:32</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityExicution.logout()[pri:3, instance:TestNGPractice.PriorityExicution@1b7cc17c]">logout</td> 
+<tr bgcolor="e98f8f">  <td>24/12/18 17:13:36</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentMethods.logout()[pri:5, instance:TestNGPractice.DependentMethods@77fbd92c]">logout</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>24/12/18 17:13:36</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentMethods.openApp()[pri:1, instance:TestNGPractice.DependentMethods@77fbd92c]">openApp</td> 
   <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="e98f8f">  <td>24/11/25 11:55:32</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriorityExicution.opneApp()[pri:1, instance:TestNGPractice.PriorityExicution@1b7cc17c]">opneApp</td> 
-  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="e98f8f">  <td>24/12/18 17:13:36</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DependentMethods.search()[pri:3, instance:TestNGPractice.DependentMethods@77fbd92c]">search</td> 
+  <td></td>   <td></td> </tr>
 </table>
