--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,34 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;paralleTesting.closeBrowser()[pri:0, instance:TestNGPractice.paralleTesting@14cd1699]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1676155468</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:07</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.pageTile()[pri:3, instance:TestNGPractice.paralleTesting@14cd1699]">pageTile</td> 
-  <td>TestNG-tests-1@1676155468</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:07</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testlogo()[pri:1, instance:TestNGPractice.paralleTesting@14cd1699]">testlogo</td> 
-  <td>TestNG-tests-1@1676155468</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:07</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testUrl()[pri:2, instance:TestNGPractice.paralleTesting@14cd1699]">testUrl</td> 
-  <td>TestNG-tests-1@1676155468</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:13:47</td>   <td>-20388</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;paralleTesting.setup(java.lang.String)[pri:0, instance:TestNGPractice.paralleTesting@14cd1699]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1676155468</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:13:47</td>   <td>-20388</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;paralleTesting.setup(java.lang.String)[pri:0, instance:TestNGPractice.paralleTesting@1573f9fc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@183386560</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:06</td>   <td>-1954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testlogo()[pri:1, instance:TestNGPractice.paralleTesting@1573f9fc]">testlogo</td> 
-  <td>TestNG-tests-2@183386560</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:06</td>   <td>-1901</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;paralleTesting.closeBrowser()[pri:0, instance:TestNGPractice.paralleTesting@1573f9fc]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@183386560</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:06</td>   <td>-1910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testUrl()[pri:2, instance:TestNGPractice.paralleTesting@1573f9fc]">testUrl</td> 
-  <td>TestNG-tests-2@183386560</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:06</td>   <td>-1905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.pageTile()[pri:3, instance:TestNGPractice.paralleTesting@1573f9fc]">pageTile</td> 
-  <td>TestNG-tests-2@183386560</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:01</td>   <td>-6784</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;paralleTesting.closeBrowser()[pri:0, instance:TestNGPractice.paralleTesting@6a78afa0]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@380122562</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:13:47</td>   <td>-20388</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;paralleTesting.setup(java.lang.String)[pri:0, instance:TestNGPractice.paralleTesting@6a78afa0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@380122562</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:01</td>   <td>-6869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testUrl()[pri:2, instance:TestNGPractice.paralleTesting@6a78afa0]">testUrl</td> 
-  <td>TestNG-tests-3@380122562</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:13:57</td>   <td>-10282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.testlogo()[pri:1, instance:TestNGPractice.paralleTesting@6a78afa0]">testlogo</td> 
-  <td>TestNG-tests-3@380122562</td>   <td></td> </tr>
-<tr bgcolor="83e5ee">  <td>24/11/19 17:14:01</td>   <td>-6807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="paralleTesting.pageTile()[pri:3, instance:TestNGPractice.paralleTesting@6a78afa0]">pageTile</td> 
-  <td>TestNG-tests-3@380122562</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>24/12/18 18:08:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_3.paymentinRupee()[pri:1, instance:TestNGPractice.GroupingTestCase_3@3c19aaa5]">paymentinRupee</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="9a969b">  <td>24/12/18 18:08:15</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_2.singupYT()[pri:2, instance:TestNGPractice.GroupingTestCase_2@55183b20]">singupYT</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>24/12/18 18:08:16</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_1.loginFB()[pri:1, instance:TestNGPractice.GroupingTestCase_1@3349e9bb]">loginFB</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="73d990">  <td>24/12/18 18:08:16</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_3.paymentinRiyal()[pri:3, instance:TestNGPractice.GroupingTestCase_3@3c19aaa5]">paymentinRiyal</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="9a969b">  <td>24/12/18 18:08:16</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_2.sigupIG()[pri:3, instance:TestNGPractice.GroupingTestCase_2@55183b20]">sigupIG</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>24/12/18 18:08:16</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupingTestCase_1.loginIG()[pri:2, instance:TestNGPractice.GroupingTestCase_1@3349e9bb]">loginIG</td> 
+  <td>main@1554547125</td>   <td></td> </tr>
 </table>
